# ecommerce-text-classification

./: .dockerignore  .env.example  .gitignore  Dockerfile.inference  Dockerfile.training  README.md  docker-compose.yml  eda_summary.json  pyproject.toml  requirements.txt
models/: .gitkeep
notebooks/: 01_eda.ipynb  02_baseline.ipynb  03_improvements.ipynb  04_hyperparam_tuning.ipynb  05_inference_smoke_tests.ipynb
src/: README.md  __init__.py  config.py  data_loader.py  embeddings.py  feature_selection.py  logging_config.py  model_utils.py  models.py  text_transformers.py  visualization.py
src/inference/: __init__.py  main.py  model_loader.py  models.py
src/preprocessing/: __init__.py  text_cleaner.py
src/training/: __init__.py  deploy.py  main.py  model_registry.py  train.py  validate.py
tests/: __init__.py  test_inference.py  test_preprocessing.py  test_training.py
