[project]
name = "ecommerce-classification"
version = "1.0.0"
description = "ML сервис для классификации товаров электронной коммерции"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    
    # ML
    "scikit-learn>=1.3.0",
    "imbalanced-learn>=0.11.0",
    
    # NLP
    "nltk>=3.8.0",
    
    # Deep Learning
    "transformers>=4.30.0",
    "datasets>=2.14.0",
    "torch>=2.0.0",
    "sentence-transformers>=2.2.0",
    
    # Boosting
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    
    # API
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # Config
    "python-dotenv>=1.0.0",
    
    # Logging
    "loguru>=0.7.0",
    
    # Hyperparameter tuning
    "optuna>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.black]
line-length = 100
target-version = ["py310"]
